# hermes-mindgraph-plugin

./: .gitignore  LICENSE  README.md  __init__.py  after-install.md  plugin.yaml  provider.py  pyproject.toml
.github/workflows/: publish.yml
hermes_mindgraph_plugin/: __init__.py  skill.md  tools.py
tests/: conftest.py  test_plugin.py
