[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-mindgraph-plugin"
version = "0.9.0"
description = "MindGraph semantic graph memory plugin for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shan Rizvi", email = "shan@rizvi.nu" },
]
keywords = ["hermes", "agent", "mindgraph", "memory", "semantic-graph", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mindgraph-sdk>=0.4.0",
]

[project.urls]
Homepage = "https://mindgraph.cloud"
Repository = "https://github.com/shuruheel/hermes-mindgraph-plugin"
Issues = "https://github.com/shuruheel/hermes-mindgraph-plugin/issues"

[tool.hatch.build.targets.wheel]
packages = ["hermes_mindgraph_plugin"]

[project.entry-points."hermes_agent.plugins"]
mindgraph = "hermes_mindgraph_plugin"
