# This is a Hermes memory-provider plugin, not a pip package.
#
# Install with:
#   hermes plugins install shuruheel/hermes-mindgraph-plugin
#
# This pyproject.toml exists only so the repo can be pip-installed for local
# development and testing (``pip install -e ".[dev]"``). Hermes itself loads
# the plugin from ``~/.hermes/plugins/hermes-mindgraph-plugin/`` after git clone
# and installs the runtime dependency (``mindgraph-sdk``) via the
# ``pip_dependencies`` field in ``plugin.yaml``.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-mindgraph-plugin"
version = "0.10.0"
description = "MindGraph semantic graph memory provider for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shan Rizvi", email = "shan@rizvi.nu" },
]
keywords = ["hermes", "agent", "mindgraph", "memory", "semantic-graph", "memory-provider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mindgraph-sdk>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://mindgraph.cloud"
Repository = "https://github.com/shuruheel/hermes-mindgraph-plugin"
Issues = "https://github.com/shuruheel/hermes-mindgraph-plugin/issues"

[tool.hatch.build.targets.wheel]
packages = ["hermes_mindgraph_plugin"]
